[gd_scene load_steps=3 format=3 uid="uid://dtej8bo36swce"]

[ext_resource type="Script" path="res://Entities/Towers/ProjectileTower/BaseBullet.gd" id="1_7rx70"]
[ext_resource type="Texture2D" uid="uid://c6mdmcmvjs336" path="res://icon.svg" id="1_kohja"]

[node name="BaseBullet" type="Area2D"]
collision_layer = 8
collision_mask = 33
script = ExtResource("1_7rx70")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_kohja")

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2(0.05, 0.05)

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
